separando endpoint criar categoria única/lista/ correção serviceTest++